# estimation-engine

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
docs/: api-spec.md  export_openapi.py  job-lifecycle.md  openapi.json  price-provider-abstraction.md  pricing-fallback-rules.md  units-and-conversions.md
src/: config.py  main.py
src/api/: dependencies.py  router.py
src/api/middleware/: api_key.py  idempotency.py
src/api/routes/: calculations.py
src/api/schemas/: calculation_input.py  calculation_output.py
src/domain/interfaces/: price_provider.py
src/domain/models/: calculation_job.py  calculation_result.py  region.py  specification_item.py
src/domain/services/: aggregation_service.py  calculation_service.py  normalization_service.py  pricing_service.py
src/infrastructure/db/: base.py  models.py
src/infrastructure/providers/: price_aggregator.py  static_price_provider.py
src/infrastructure/queue/: celery_app.py  cleanup.py  tasks.py
src/infrastructure/repositories/: calculation_repository.py
src/shared/: id_generator.py
src/shared/errors/: app_errors.py
src/shared/units/: canonical_units.py  unit_converter.py
tests/: conftest.py
tests/fixtures/: edge_cases.json  sample_prices.json  sample_specification.json
tests/integration/: test_calculation_cancel.py  test_calculation_worker.py  test_calculations_api.py
tests/unit/: test_aggregation_service.py  test_normalization_service.py  test_pricing_service.py  test_schemas.py  test_unit_converter.py
(+2 files in other folders)
